--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="preference_file_key">chrisbriant_chat_shared_prefs</string>
     <string name="enter_name">Enter Name</string>
     <string name="btn_send">Send</string>
+    <string name="enter_room_text">Enter Room Name</string>
 </resources>
