--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="no">No</string>
     <string name="sure_text">Are you sure?</string>
     <string name="edt_chat_message">Send a chat message...</string>
+    <string name="btn_exit">Exit</string>
 </resources>
